--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.2"
+version: "2.1"
 
 services:
 
@@ -35,11 +35,11 @@ services:
     image: video_nginx:v1
     container_name: video_nginx
     depends_on:
-      - video_service1:
+      video_service1:
         condition: service_started
-      - video_service2:
+      video_service2:
         condition: service_started
-      - video_service3:
+      video_service3:
         condition: service_started
     links:
       - video_service1
